# BabylonReactNative

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RNPermissions.vcxproj  SECURITY.md  azure-pipelines.yml  cgmanifest.json  package.json  packages.config  readmetest.txt  setup_dev.js
.github/: pull_request_template.md
.github/workflows/: add_artifact_urls.yml  android.yml  append_release.yml  bn_master_commit.yml  ios.yml  ios_android.yml  nightly.yml  package.yml  pr.yml  pr_master.yml  publish.yml  publish_no_release.yml  publish_preview.yml  testVersion.yml  test_android.yml  test_compatibility.yml  test_ios.yml  test_protocol.yml  test_version.yml  typescript.yml  windows.yml  windows_tag.yml
.github/workflows/macos_freespace/: action.yml
Apps/: rnta-0.71.patch
Apps/BRNPlayground/: .gitignore  App.tsx  app.json  metro.config.js  package-lock.json  package.json  postinstall.js  react-native.config.js
Apps/BRNPlayground/android/: gradle.properties  settings.gradle
Apps/BRNPlayground/ios/: Podfile
Apps/BRNPlayground/macos/: Podfile
Apps/BRNPlayground/scripts/: set-react-version.mjs
Apps/PackageTest/: .gitignore  App.tsx  package-lock.json  package.json
Apps/PackageTest/0.63.1/: app.json  package-lock.json  package.json
Apps/PackageTest/0.64.0/: index.js  package-lock.json  package.json
Apps/PackageTest/0.64.0-rc.0/: package-lock.json  package.json
Apps/PackageTest/0.65.0/: index.js  package-lock.json  package.json
Apps/PackageTest/0.69.0/: .gitignore  index.js  metro.config.js  package-lock.json  package.json
Apps/PackageTest/android/: build.gradle
Apps/PackageTest/ios/: Podfile
Apps/PackageTest/packagetest-shared/: App.tsx  app.json  (+1 more)
Apps/Playground/: .eslintrc.js  .gitignore  App.tsx  Deploy.binlog  README.md  app.json  build.binlog  index.js  metro.config.js  msbuild.binlog  package-lock-windows.json  package-lock.json  package-windows.json  package.json  postinstall.js  react-native.config.js  tsconfig.json
Apps/TestCompatibility/: package-lock.json  package.json  testBNCompatibility.js
Apps/TestProtocol/: package.json
Documentation/: TestingCompatibility.md  TestingPackages.md  TestingProtocol.md
Modules/@babylonjs/react-native-iosandroid/ios/: BabylonEngineView.h  BabylonEngineView.mm  BabylonModule.mm  BabylonNativeInterop.h  BabylonNativeInterop.mm  CMakeLists.txt  EngineViewManager.mm
Modules/@babylonjs/react-native-iosandroid/ios/Fabric/: BabylonEngineViewComponentView.h  BabylonEngineViewComponentView.mm
Modules/@babylonjs/react-native-windows/windows/: CMakeLists.txt
Modules/@babylonjs/react-native-windows/windows/BabylonReactNative/: BabylonModule.cpp  BabylonModule.h  BabylonReactNative.vcxproj  BabylonReactNative.vcxproj.filters  EngineView.cpp  EngineView.h  EngineView.idl  EngineViewManager.cpp  EngineViewManager.h  ReactPackageProvider.h  packages.config  pch.h
Modules/@babylonjs/react-native-windows/windows/include/: XrAnchorHelperOpenXR.h  XrContextHelperOpenXR.h
Modules/@babylonjs/react-native-windows/windows/scripts/: Build.bat  Build.ps1  BuildPlayground.bat  BuildPlayground.ps1  PRBuild.bat  PRBuild.ps1  Utils.psm1
Modules/@babylonjs/react-native/android/: CMakeLists.txt  ReactBabylonNative.cpp  build.gradle
Modules/@babylonjs/react-native/android/include/: XrAnchorHelperARCore.h  XrContextHelperARCore.h
Modules/@babylonjs/react-native/android/src/main/: AndroidManifest.xml
Modules/@babylonjs/react-native/android/src/main/cpp/: BabylonNativeInterop.cpp
Modules/@babylonjs/react-native/android/src/main/java/com/babylonreactnative/: BabylonModule.java  BabylonNativeInterop.java  BabylonPackage.java  EngineView.java  EngineViewManager.java  SnapshotDataReturnedEvent.java
Modules/@babylonjs/react-native/android/src/main/java/com/reactlibrary/: BabylonModule.java  BabylonNativeInterop.java  EngineView.java  EngineViewManager.java  SnapshotDataReturnedEvent.java
Modules/@babylonjs/react-native/ios/: BabylonModule.mm  BabylonNative.cpp  BabylonNative.h  BabylonNativeInterop.h  BabylonNativeInterop.mm  CMakeLists.txt  EngineViewManager.mm
Modules/@babylonjs/react-native/shared/: BabylonNative.cpp  BabylonNative.h  CMakeLists.txt  DispatchFunction.h  SetTimeout.h  Shared.h  XrAnchorHelper.h  XrContextHelper.h
Modules/@babylonjs/react-native/shared/BabylonNative/: CMakeLists.txt
Modules/@babylonjs/react-native/windows/: .gitignore  BabylonNative.sln  BabylonNativeDependencies.sln  BabylonReactNative.sln  CMakeLists.txt  README.md  README.txt  ReactNativeBabylon.sln  Setup.ps1  setup.bat
Modules/@babylonjs/react-native/windows/BabylonNative/: BabylonModule.cpp  BabylonModule.h  BabylonNative.vcxproj  BabylonNative.vcxproj.filters  EngineView.cpp  EngineView.h  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  pch.h  readme.txt
Modules/@babylonjs/react-native/windows/BabylonReactNative/: BabylonModule.cpp  BabylonModule.h  BabylonReactNative.vcxproj  BabylonReactNative.vcxproj.filters  BabylonReactNative_TemporaryKey.pfx  EngineView.cpp  EngineView.h  EngineView.idl  EngineViewManager.cpp  EngineViewManager.h  PropertySheet.props  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  pch.h  resource.h
Modules/@babylonjs/react-native/windows/ReactNativeBabylon/: BabylonModule.cpp  BabylonModule.h  BabylonNative.rc  EngineView.cpp  EngineView.h  EngineViewManager.h  ReactNativeBabylon.vcxproj  ReactNativeBabylon.vcxproj.filters  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  packages.config  readme.txt
Modules/@babylonjs/react-native/windows/scripts/: Build.bat  Build.ps1  BuildPlayground.ps1  PRBuild.bat  PRBuild.ps1  PRSetup.ps1  Setup.ps1  Utils.psm1
Modules/@babylonjs/react-native/windows/src/: BabylonNative.cpp  BabylonNative.h
Package/: .gitignore  Build.sh  gulpfile.js  package-lock.json  package.json  react-native-babylon.podspec  setup_dev.js
Package/Android/: build.gradle
Package/BaseKit/: react-native-babylon.podspec
Package/iOS/: CMakeLists.txt
PackageUp/: package.json
(+361 files in other folders)
